# ADBCommandCenter

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  adb_pairing.cpp
app/src/main/java/com/joaomgcd/adb/: AdbClient.kt  AdbConnectionManager.kt  AdbDevice.kt  AdbDeviceApp.kt  AdbDiscoveryManager.kt  AdbKey.kt  AdbPairing.kt  AdbPermission.kt  AdbProtocol.kt
app/src/main/java/com/joaomgcd/adbcommandcenter/: ApplicationAdbCommandCenter.kt  MainActivity.kt
app/src/main/java/com/joaomgcd/adbcommandcenter/adb/connection/: AdbConnectionService.kt
app/src/main/java/com/joaomgcd/adbcommandcenter/adb/lifecycle/: AdbLifecycleManager.kt
app/src/main/java/com/joaomgcd/adbcommandcenter/adb/notification/: AdbNotificationHelper.kt
app/src/main/java/com/joaomgcd/adbcommandcenter/agent/: AgentClient.kt  AgentManager.kt  ShellAgent.java
app/src/main/java/com/joaomgcd/adbcommandcenter/apps/data/: AppsRepositoryImpl.kt
app/src/main/java/com/joaomgcd/adbcommandcenter/apps/di/: AppsDataModule.kt
app/src/main/java/com/joaomgcd/adbcommandcenter/ui/: AdbControlCenterApp.kt
app/src/main/res/drawable/: ic_launcher_background_vector.xml  ic_launcher_foreground_vector.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/joaomgcd/adbcommandcenter/: AdbPairingRepositoryTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+92 files in other folders)
